# storage_web_platform_3

./: .env.example  .gitignore  BUGFIX_CORS.md  CLAUDE.md  PROJECT_HANDOFF_CONTEXT.md  README.md  constraints.txt  create-delivery-repo.ps1  pyproject.toml  skills-lock.json  start.bat  tmp_commit_stat.txt  tmp_diff.txt  tmp_git_log.txt  tmp_parent.txt
.claude/: settings.json  settings.local.json
.github/workflows/: backend-ci.yml  frontend-ci.yml
OpenDSS/34Bus/: DSSViewIntercom.Txt
backend/: README.md  storage_fastapi_backend.py
backend/models/: api_models.py  load_data_models.py  project_model.py
backend/routes/: assets.py  build.py  project.py  solver.py  (+1 more)
docs/: architecture.md  专利初稿_双阶段协同评估框架.md  专利初稿_工商业负荷建模.md  专利附图说明_双阶段协同评估框架.md  专利附图说明_工商业负荷建模.md  创新点清单_工商业配储优化平台.md  创新点清单_配电网节点负荷建模.md
frontend/: .env.example  README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
patent_outputs/: __tmp_deep_update.docx  around_formula9.txt  formula_texts.txt  专利申报材料1：一种基于配电网运行数据的储能系统容量搜索空间自适应确定方法_深化版.docx  专利申报材料1：一种基于配电网运行数据的储能系统容量搜索空间自适应确定方法_深化版_公式排版修正版.docx  专利申报材料1：一种基于配电网运行数据的储能系统容量搜索空间自适应确定方法_深化版_公式排版版.docx  专利申报材料1：一种基于配电网运行数据的储能系统容量搜索空间自适应确定方法_深化版_图表修正版.docx  专利申报材料1：一种基于配电网运行数据的储能系统容量搜索空间自适应确定方法_补全稿.docx  专利申报材料1：一种基于配电网运行数据的储能系统容量搜索空间自适应确定方法_补全稿.fixed.tmp.docx  专利申报材料1：一种基于配电网运行数据的储能系统容量搜索空间自适应确定方法_补全稿_修正版.docx
scripts/: build_runtime_files_industrial_or_commercial.py  build_runtime_files_residential.py  全年逐日典型日聚类1h级居民负荷建模.py
storage_engine_project/: IMPLEMENTATION_NOTES.md  IMPROVEMENTS_SUMMARY.md  logging_config.py  main.py
(+546 files in other folders)
